--- a/django-models/LibraryProject/relationship_app/static/css/styles.css
+++ b/django-models/LibraryProject/relationship_app/static/css/styles.css
@@ -48,3 +48,10 @@ a {
     color: #007bff;
     text-decoration: none;
 }
+
+ul {
+    padding-left: 20px;
+    font-size: 0.85rem; /* Makes the help text slightly smaller/cleaner */
+    color: #555;
+    margin-bottom: 15px;
+}
