--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'posts' %}">Blog Posts</a></li>
+                <li><a href="{% url 'post-list' %}">Home</a></li>
+                <li><a href="{% url 'post-list' %}">Blog Posts</a></li>
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'profile' %}">Profile</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
