feat: implement tagging and search functionality
- Added Tag model and M2M relationship with Post
- Updated PostForm to handle comma-separated string input for tags
- Implemented search view using Q objects for multi-field filtering
- Added PostByTagListView to filter posts by tag
- Created search_results.html and updated templates to display tags
- Configured URLs for /tags/<tag_name>/ and /search/

--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -6,5 +6,15 @@
         <p>By {{ post.author }} on {{ post.published_date }}</p>
         <p>{{ post.content|truncatewords:30 }}</p>
       </article>
+
+      <p class="tags">
+        Tags:
+        {% for tag in posts.tags.all %}
+          <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>
+          {% if not forloop.last %}, {% endif %}
+        {% empty %}
+          No tags
+        {% endfor %}
+      </p>
   {% endfor %}
 {% endblock %}
